--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "shrinkly",
-  "version": "1.1.2",
+  "name": "shaveurl",
+  "version": "1.1.3",
   "description": "A versatile and user-friendly npm package designed to instantly shorten URLs using multiple popular free URL shortening services, simplifying link sharing with one quick command.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "shrinkly": "./dist/cli.js"
+    "shaveurl": "./dist/cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eqaderi/shrinkly.git"
+    "url": "git+https://github.com/eqaderi/shaveurl.git"
   },
   "keywords": [
     "url",
@@ -33,9 +33,9 @@
   "author": "Ershad Qaderi",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/eqaderi/shrinkly/issues"
+    "url": "https://github.com/eqaderi/shaveurl/issues"
   },
-  "homepage": "https://github.com/eqaderi/shrinkly#readme",
+  "homepage": "https://github.com/eqaderi/shaveurl#readme",
   "dependencies": {
     "axios": "^1.4.0",
     "yargs": "^17.7.2"
